--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   color: #fff;
   max-width: 500px;
   margin: 0 auto;
-  padding: 20 10;
+  padding: 2px 10px;
   background-color: rgba(111, 111, 111, 0.5);
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
 }
