--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body {
 <body>
 
 <div class="cvs">
-	<a href="CV-Europass-20190220-Alves-EN.pdf">CV-EN</a><br>
-	<a href="CV-Europass-20190220-Alves-PT.pdf">CV-PT</a>
+	<!--<a href="CV-Europass-20190220-Alves-EN.pdf">CV-EN</a><br>-->
+	<a href="CV-ESP-Europass-20190530-Alves-PT.pdf">CV-PT</a>
 </div>
 
 <div class="container">
