--- a/font_test.html
+++ b/font_test.html
@@ -3,6 +3,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
+@font-face { font-family: June; src: url('https://outsystemsqual02.jmartins.com/resourcesfont/Roboto-Bold-webfont.eot'); } 
+h1 {
+font-family:June;
+}
+	
+	
 html, body { height: 100%; }
 body {
   display: flex;
@@ -44,11 +51,11 @@ body {
 
 <div class="container">
   Soon, also this is a test for icons and themes fonts etc
+<h1>This is a new font hi!</h1>
 </div>
 
 
 
-<canvas class="background"></canvas>
 
 
 
