--- a/font_test.html
+++ b/font_test.html
@@ -3,7 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-
+	
+@import url(https://outsystemsqual02.jmartins.com/PortalBO_Common/css/font-awesome.css);
+	
 @font-face { font-family: June; src: url('https://outsystemsqual02.jmartins.com/resourcesfont/Roboto-Bold-webfont.eot'); } 
 h1 {
 font-family:June;
@@ -51,7 +53,7 @@ body {
 
 <div class="container">
   Soon, also this is a test for icons and themes fonts etc
-<h1>This is a new font hi!</h1>
+<h1 class="Login_Info_Username">This is a new font hi!</h1>
 </div>
 
 
