--- a/font_test.html
+++ b/font_test.html
@@ -54,6 +54,7 @@ body {
 <div class="container">
   Soon, also this is a test for icons and themes fonts etc
 <h1 class="Login_Info_Username">This is a new font hi!</h1>
+<a tabindex="24" title="My Info" disabled="disabled" class="aspNetDisabled Login_Info_Username" id="PortalBO_Common_wt40_block_wtHeader_PortalBO_Common_wt160_block_wt8_wt1" alt="My Info">Henrique Mateus Cirilo Alves</a>
 </div>
 
 
