Update and rename font_test.html to index.html

--- a/portal/index.html
+++ b/portal/index.html
@@ -4,12 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 	
-@import url(https://outsystemsqual02.jmartins.com/PortalBO_Common/css/font-awesome.css);
-	
-@font-face { font-family: June; src: url('https://outsystemsqual02.jmartins.com/resourcesfont/Roboto-Bold-webfont.eot'); } 
-h1 {
-font-family:June;
-}
+@import url(font-awesome.css);
+
 	
 	
 html, body { height: 100%; }
