--- a/portal/index.html
+++ b/portal/index.html
@@ -52,6 +52,7 @@ body {
 <h1 class="Login_Info_Username">This is a new font hi!</h1>
 <a tabindex="24" title="My Info" disabled="disabled" class="aspNetDisabled Login_Info_Username" id="PortalBO_Common_wt40_block_wtHeader_PortalBO_Common_wt160_block_wt8_wt1" alt="My Info">Henrique Mateus Cirilo Alves</a>
 <i class="far fa-abacus" style="font-size: 48px;"></i>
+	<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
 	</div>
 
 
