--- a/portal/index.html
+++ b/portal/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-	
+
+@import url(font-awesome2.css);
 @import url(font-awesome.css);
 
 	
