--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-html, body { height: 100%; }
+html, body { height: 100%; margin:0;}
 body {
   display: flex;
   align-items: center;
@@ -25,6 +25,8 @@ body {
   right: 0;
   z-index: -1;
   background: black;
+  height: auto !important;
+
 }
 
 .cvs{
