--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-html, body { height: 100%; margin:0;}
+html, body { height: 100%; margin:0;overflow:hidden;}
 body {
   display: flex;
   align-items: center;
