--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 <body>
 
 <div class="cvs">
-	<!--<a href="CV-Europass-20190220-Alves-EN.pdf">CV-EN</a><br>-->
+	<a href="CV-Europass-20190220-Alves-EN.pdf">CV-EN</a><br>
 	<a href="CV-ESP-Europass-20190530-Alves-PT.pdf">CV-PT</a>
 </div>
 
